use stream toList() method